# bascat

./: .gitignore  AUTHORS  BasCat.cs  BasCat.sln  Bascat.sln  BinReader.cs  Cargo.toml  LICENSE  LICENSE.txt  Makefile  Makefile.am  Makefile.inc  NEWS  Package.swift  Program.cs  README  README.md  README.txt  RWTodd.BasCat.csproj  Unprotector.cs  bascat.1  bascat.1.in  bascat.cabal  bascat.lisp  bascat.ps1  bascat.scala  bascat.sln  bascat.texi  binary.go  build.gradle  build.ps1  build.sbt  build_for_ecl.lisp  config.h  config.h.in  configure  configure.ac  deploy.ps1  go.mod  main.c  (+13 more)
BasCat/: BasCat.cpp  BasCat.cs  BasCat.vcxproj  BasCat.vcxproj.filters  BinReader.cs  Program.cs  Unprotector.cs  pch.h  resource.h  run-tests.ps1
BasCat/Properties/: launchSettings.json
BasCat_UWPConsole/: BasCat_UWPConsole.vcxproj  BasCat_UWPConsole.vcxproj.filters  Package.appxmanifest  Program.cpp  pch.h
Docs-en-US/: ConvertFrom-GWBasic.md  RWTodd.GWBasic.md
JBasCat/: README.md  build.xml  licenseheader.txt  pom.xml
JBasCat/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
JBasCat/src/main/java/rwt/bascat/: Cmd.java
JBasCat/src/rwt/bascat/: BinaryReader.java  Cmd.java  Token.java  Unprotector.java
KTBascat/src/rwt/bascat/: BinaryReader.kt  Cmd.kt  Token.kt  Unprotector.kt
RWTodd.GWBasic/: RWTodd.GWBasic.psd1  RWTodd.GWBasic.psm1
RWTodd.GWBasic/en-US/: RWTodd.GWBasic-Help.xml  RWTodd.GWBasic.dll-Help.xml
Sources/bascat/: main.swift
cmd/bascat/: binary.go  main.go  opcodes.go  unprotect.go
fsharp_version/: README.md  bascat.sln
fsharp_version/bascat/: AssemblyInfo.fs  Program.fs  bascat.fsproj  opcodes.fs
lib/: bascat.dart
project/: Dependencies.scala
scala_version/: README.md  binary.scala  build.sbt  main.scala  opcodes.scala  token.scala  unprotect.scala
src/: BasCat.cs  BinReader.cs  ConvertFromGWBasic.cs  Main.hs  RWTodd.GWBasic.csproj  Token.kt  Unprotector.cs  Unprotector.kt  main.rs
src/main/java/: module-info.java
src/main/java/org/rwtodd/bascat/: BinaryReader.java  Cmd.java  MBFReader.java  Unprotector.java
src/org/rwtodd/bascat/: core.clj
test/org/rwtodd/bascat/: core_test.clj
tests/: Makefile.am  NEPTUNE.txt  compare.sh
