name:                bascat
version:             0.1.0.0
synopsis:            Decode tokenized GW-BASIC/BASICA files.
-- description:
homepage:            https://github.com/rwtodd/bascat#readme
license:             BSD3
license-file:        LICENSE
author:              Richard Todd
maintainer:          richard.w.todd@outlook.com
copyright:           2019 Richard Todd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bascat
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       array,
                       bytestring,
                       mtl,
                       base >= 4.7 && < 5
  ghc-options:         -O2
